[package]
name = "restup"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.38", features = ["derive"] }
log = "0.4.27"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["fs"] }
